--- a/TossAndFetchScoring.Web/package.json
+++ b/TossAndFetchScoring.Web/package.json
@@ -7,7 +7,7 @@
     "dev": "npm install && cross-var vite --port $PORT",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "cross-var vite preview --port $PORT"
   },
   "dependencies": {
     "react": "^18.2.0",
