--- a/TossAndFetchScoring.AppHost/TossAndFetchScoring.AppHost.csproj
+++ b/TossAndFetchScoring.AppHost/TossAndFetchScoring.AppHost.csproj
@@ -13,7 +13,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Aspire.Hosting" version="8.0.0-preview.4.24156.9 " />
+    <PackageReference Include="Aspire.Hosting" version="8.0.0-preview.5.24201.12" />
+    <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.5.24201.12" />
+    <PackageReference Include="Aspire.Hosting.Azure.Redis" Version="8.0.0-preview.5.24201.12" />
+    <PackageReference Include="Aspire.Hosting.NodeJs" Version="8.0.0-preview.5.24201.12" />
   </ItemGroup>
 
 </Project>
